--- a/06_DOM/one.html
+++ b/06_DOM/one.html
@@ -4,12 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM learning </title>
+     <style>
+        .bg-black {
+            background-color: black;
+            color :beige;
+        }
+    </style>
 </head>
-<body>
-    <div class="bgblack">
+<body class="bg-black">
+   
+    <div >
         <h1 id="Title" class="heading"></h1>
         <p>Lorem ipsum dolor sit amet.</p>
     </div>
+
+
+    notes=>
+ 1.innerHTML: returns all html nodes 
+2.textContent : returns all text content
+3.innerText : gives the text in the selected node
+4.querySelector
+5.querySelectorAll
+6.getAttribute
+7.setAttribute
     
 </body>
 </html>
