--- a/06_DOM/one.html
+++ b/06_DOM/one.html
@@ -14,19 +14,20 @@
 <body class="bg-black">
    
     <div >
-        <h1 id="Title" class="heading"></h1>
+        <h1 id="title" class="heading">Coding korbe</h1>
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <h2>Lorem ipsum dolor sit amet</h2>
         <p>Lorem ipsum dolor sit amet.</p>
+        <input type="password" name="" id="">
+       
+       <ul>
+        <li class="list-item">one</li >
+        <li class="list-item">two</li >
+        <li class="list-item">three</li>
+        <li class="list-item">four</li >
+       </ul>
     </div>
-
-
-    notes=>
- 1.innerHTML: returns all html nodes 
-2.textContent : returns all text content
-3.innerText : gives the text in the selected node
-4.querySelector
-5.querySelectorAll
-6.getAttribute
-7.setAttribute
     
 </body>
 </html>
